static/docs/1.3.0/api/python/_sources/generated/gravitino.dto.schema_dto.SchemaDTO.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.

gravitino.dto.schema\_dto.SchemaDTO
===================================

.. currentmodule:: gravitino.dto.schema_dto

.. autoclass:: SchemaDTO
   :members:                                    
   :show-inheritance:                           
   :inherited-members:                          

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~SchemaDTO.__init__
      ~SchemaDTO.audit_info
      ~SchemaDTO.comment
      ~SchemaDTO.from_dict
      ~SchemaDTO.from_json
      ~SchemaDTO.name
      ~SchemaDTO.properties
      ~SchemaDTO.schema
      ~SchemaDTO.supports_tags
      ~SchemaDTO.to_dict
      ~SchemaDTO.to_json
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SchemaDTO.dataclass_json_config
   
   